--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,3 +39,56 @@ html.dark {
   background-color: rgb(156 163 175); /* Set the color of the scrollbar thumb on hover */
 }
 
+@keyframes blur-text {
+  0% {
+    filter: blur(0px);
+    opacity: 1; 
+  }
+  60% {
+    filter: blur(1px); 
+    opacity: 0.5; 
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1; 
+  }
+}
+
+.loading-text span {
+  display: inline-block;
+  margin: 0 5px;
+  color: #fff;
+  font-family: 'Quattrocento Sans', sans-serif;
+}
+
+.loading-text span:nth-child(1) {
+  animation: blur-text 1.5s 0s infinite linear alternate;
+}
+.loading-text span:nth-child(2) {
+  animation: blur-text 1.5s 0.2s infinite linear alternate;
+}
+.loading-text span:nth-child(3) {
+  animation: blur-text 1.5s 0.4s infinite linear alternate;
+}
+.loading-text span:nth-child(4) {
+  animation: blur-text 1.5s 0.6s infinite linear alternate;
+}
+.loading-text span:nth-child(5) {
+  animation: blur-text 1.5s 0.8s infinite linear alternate;
+}
+.loading-text span:nth-child(6) {
+  animation: blur-text 1.5s 1.0s infinite linear alternate;
+}
+.loading-text span:nth-child(7) {
+  animation: blur-text 1.5s 1.2s infinite linear alternate;
+}
+.loading-text span:nth-child(8) {
+  animation: blur-text 1.5s 1.2s infinite linear alternate;
+}
+.loading-text span:nth-child(9) {
+  animation: blur-text 1.5s 1.2s infinite linear alternate;
+}
+.loading-text span:nth-child(10) {
+  animation: blur-text 1.5s 1.2s infinite linear alternate;
+}
+
