--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,38 +57,48 @@ html.dark {
 .loading-text span {
   display: inline-block;
   margin: 0 5px;
-  color: #fff;
   font-family: 'Quattrocento Sans', sans-serif;
 }
 
 .loading-text span:nth-child(1) {
-  animation: blur-text 1.5s 0s infinite linear alternate;
+  animation: blur-text 2.4s 0s infinite linear alternate;
 }
 .loading-text span:nth-child(2) {
-  animation: blur-text 1.5s 0.2s infinite linear alternate;
+  animation: blur-text 2.4s 0.2s infinite linear alternate;
 }
 .loading-text span:nth-child(3) {
-  animation: blur-text 1.5s 0.4s infinite linear alternate;
+  animation: blur-text 2.4s 0.4s infinite linear alternate;
 }
 .loading-text span:nth-child(4) {
-  animation: blur-text 1.5s 0.6s infinite linear alternate;
+  animation: blur-text 2.4s 0.6s infinite linear alternate;
 }
 .loading-text span:nth-child(5) {
-  animation: blur-text 1.5s 0.8s infinite linear alternate;
+  animation: blur-text 2.4s 0.8s infinite linear alternate;
 }
 .loading-text span:nth-child(6) {
-  animation: blur-text 1.5s 1.0s infinite linear alternate;
+  animation: blur-text 2.4s 1.0s infinite linear alternate;
 }
 .loading-text span:nth-child(7) {
-  animation: blur-text 1.5s 1.2s infinite linear alternate;
+  animation: blur-text 2.4s 1.2s infinite linear alternate;
 }
 .loading-text span:nth-child(8) {
-  animation: blur-text 1.5s 1.2s infinite linear alternate;
+  animation: blur-text 2.4s 1.4s infinite linear alternate;
 }
 .loading-text span:nth-child(9) {
-  animation: blur-text 1.5s 1.2s infinite linear alternate;
+  animation: blur-text 2.4s 1.6s infinite linear alternate;
 }
 .loading-text span:nth-child(10) {
-  animation: blur-text 1.5s 1.2s infinite linear alternate;
+  animation: blur-text 2.4s 1.8s infinite linear alternate;
 }
-
+.loading-text span:nth-child(11) {
+  animation: blur-text 2.4s 2.0s infinite linear alternate;
+}
+.loading-text span:nth-child(12) {
+  animation: blur-text 2.4s 2.1s infinite linear alternate;
+}
+.loading-text span:nth-child(13) {
+  animation: blur-text 2.4s 2.2s infinite linear alternate;
+}
+.loading-text span:nth-child(14) {
+  animation: blur-text 2.4s 2.3s infinite linear alternate;
+}
