type safety in creating class

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -102,3 +102,34 @@ html.dark {
 .loading-text span:nth-child(14) {
   animation: blur-text 2.4s 2.3s infinite linear alternate;
 }
+
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 8px solid #0000;
+  border-right-color: #ffa50097;
+  position: relative;
+  animation: l24 1s infinite linear;
+}
+
+.loader:before,
+.loader:after {
+  content: "";
+  position: absolute;
+  inset: -8px;
+  border-radius: 50%;
+  border: inherit;
+  animation: inherit;
+  animation-duration: 2s;
+}
+
+.loader:after {
+  animation-duration: 4s;
+}
+
+@keyframes l24 {
+  100% {
+    transform: rotate(1turn)
+  }
+}
