sort byin evaluate

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,8 +11,9 @@ body,
 
 /* scroll bar */
 /* width */
-.scrollbar-thin::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 4px;
+  height: 4px;
 }
 
 /* Track */
