--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -1,5 +1,5 @@
 ---
-import "../app.css";
+import "@/styles/globals.css";
 import { ViewTransitions } from "astro:transitions";
 import { Sidebar } from "./Sidebar.tsx";
 import { Toaster } from "react-hot-toast";
