--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -24,6 +24,6 @@ if (currentUser == null) return Astro.redirect("/sign-in");
 // }
 ---
 
-<RootLayout>
+<RootLayout title="Dashboard">
   <Dashboard currentUser={currentUser} />
 </RootLayout>
