course and class layout

--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -3,12 +3,15 @@ import "@/styles/globals.css";
 import { ViewTransitions } from "astro:transitions";
 import { Sidebar } from "./Sidebar.tsx";
 import { Toaster } from "react-hot-toast";
+import { SidebarItem } from "@/components/Sidebar";
 
 interface Props {
   title?: string;
+  sideBarItems?: SidebarItem[]
 }
 
 const { title = "Tutly" } = Astro.props;
+const { sideBarItems } = Astro.props;
 
 const pathname = Astro.url.pathname;
 const user = Astro.locals.user;
@@ -42,7 +45,7 @@ globalThis.pathname = pathname;
   <body>
     <Toaster client:load />
     {user && (
-      <Sidebar client:load {pathname} {user}>
+      <Sidebar client:load pathname={pathname} user={user} sideBarItems={sideBarItems ?? []}>
         <slot />
       </Sidebar>
     )}
