--- a/src/pages/courses/index.astro
+++ b/src/pages/courses/index.astro
@@ -63,24 +63,29 @@ const coursesFinal = (currentUser.role === "INSTRUCTOR")?courses:publishedCourse
 <RootLayout title="Courses">
   <div class="w-full">
     <div class="flex w-full">
-      {
-        coursesFinal?.length === 0 ? (
-          <div>
-            {currentUser?.role === "INSTRUCTOR" ? (
-              <AddCourse client:load/>
-            ) : (
-              <NoDataFound message="No courses found!" />
-            )}
-          </div>
-        ) : (
-          <div class="flex flex-wrap">
-            {coursesFinal?.map((course) => {
-              return <CourseCard currentUser={currentUser} key={course.id} course={course} client:load />;
-            })}
-            {currentUser?.role === "INSTRUCTOR" && <AddCourse />}
-          </div>
-        )
-      }
+      {coursesFinal?.length === 0 && (
+        <div>
+          {currentUser?.role === "INSTRUCTOR" ? (
+            <AddCourse client:load />
+          ) : (
+            <NoDataFound message="No courses found!" />
+          )}
+        </div>
+      )}
+
+      {coursesFinal?.length > 0 && (
+        <div class="flex flex-wrap">
+          {coursesFinal.map((course) => (
+            <CourseCard 
+              currentUser={currentUser}
+              key={course.id}
+              course={course}
+              client:load
+            />
+          ))}
+          {currentUser?.role === "INSTRUCTOR" && <AddCourse client:load />}
+        </div>
+      )}
     </div>
   </div>
 </RootLayout>
