instructor/attendance pending

--- a/src/pages/instructor/assignments/[id].astro
+++ b/src/pages/instructor/assignments/[id].astro
@@ -25,6 +25,8 @@ const {courses, coursesWithAssignments } = data || {}
             courses={courses}
             assignments={coursesWithAssignments}
             userId={id}
+
+            client : load
           />
         )}
       </div>
