--- a/src/pages/instructor/assignments/getByAssignment/index.astro
+++ b/src/pages/instructor/assignments/getByAssignment/index.astro
@@ -112,6 +112,8 @@ const coursesWithAssignments = await db.course.findMany({
               <SingleAssignmentBoard
                 courses={courses}
                 assignments={coursesWithAssignments}
+
+                client: load
               />
             </>
           ) : (
