--- a/src/pages/assignments/[id]/index.astro
+++ b/src/pages/assignments/[id]/index.astro
@@ -161,7 +161,7 @@ if (currentUser.role == "INSTRUCTOR") {
     assignments={sortedAssignments}
     notSubmittedMentees={notSubmittedMentees}
     isCourseAdmin={isCourseAdmin ?? false}
-    username={username}
+    username={username ?? ""}
     
     client:load
   />
