--- a/src/pages/instructor/assignments/getByAssignment/index.astro
+++ b/src/pages/instructor/assignments/getByAssignment/index.astro
@@ -109,15 +109,10 @@ const coursesWithAssignments = await db.course.findMany({
           </h1>
           {courses && courses.length > 0 ? (
             <>
-              <SingleAssignmentBoard
-                courses={courses}
-                assignments={coursesWithAssignments}
-
-                client: only
-              />
+              <SingleAssignmentBoard courses={courses} assignments={coursesWithAssignments}  client:load/>
             </>
           ) : (
-            <NoDataFound message="No students found!" />
+            <NoDataFound message="No students found!" client:load />
           )}
         </div>
       </div>
