--- a/src/pages/instructor/report/[courseId]/index.astro
+++ b/src/pages/instructor/report/[courseId]/index.astro
@@ -22,7 +22,7 @@ const courses = coursesData?.data
 
 <RootLayout title="Report">
     <Report 
-        initialdata={sortedData as DataItem[]} 
+        intitialdata={sortedData as DataItem[]} 
         allCourses={courses as Course[]} 
         courseId={courseId} 
     />
