--- a/src/pages/instructor/leaderboard/index.astro
+++ b/src/pages/instructor/leaderboard/index.astro
@@ -2,26 +2,36 @@
 import LeaderBoard from "@/components/leaderBoard.tsx";
 import RootLayout from "@/layouts/RootLayout.astro";
 import { actions } from "astro:actions";
-
-const currentUser = Astro.locals.user
+import db from "@/lib/db";
+const currentUser = Astro.locals.user!
 const call = Astro.callAction
 
 if(!currentUser) return null
 const {data} = await call(actions.leaderboard_getInstructorLeaderboardData,{})
-if(!data?.success) return null
+if(!data) return null
 
-const {sortedSubmissions,enrolledCourses} = data.data 
+const {sortedSubmissions,enrolledCourses} = data 
 
-const {data:mentors} = await call(actions.mentors_getMentors,{
-    courseId: currentUser?.enrolledUsers[0].courseId
-})
-
+const mentors = enrolledCourses?.data && await db.user.findMany({
+      where: {
+        role: "MENTOR",
+        enrolledUsers: {
+          some: {
+            courseId: enrolledCourses?.data[0]?.id!
+          }
+        }
+      },
+      include: {
+        enrolledUsers: true
+      }
+    }); 
 
 ---
 
 <RootLayout title="Leaderboard">
     {
         (sortedSubmissions && enrolledCourses )?
+        // @ts-ignore
         <LeaderBoard submissions={sortedSubmissions} courses={enrolledCourses} currentUser={currentUser} mentors={mentors} client:load />
         :
         <div class="mt-8 text-center text-3xl font-semibold">
