fix classroom sidebar, new assignment modal

--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -51,7 +51,7 @@ globalThis.pathname = pathname;
         pathname={pathname} 
         user={user} 
         sideBarItems={sideBarItems ?? []} 
-        {...(isSidebarOpen !== undefined && { open: isSidebarOpen })}
+        isSidebarOpen={isSidebarOpen!}
       >
         <slot />
       </Sidebar>
